--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,7 +528,7 @@ header.transparent .user-buttons:hover .add-listing{
 }
 .add-listing:before{
     font-family: 'icon';
-    content: "\ea7c";
+    content: "\ea65";
     position: absolute;
     font-size: 25px;
     left: 12px;
@@ -924,7 +924,7 @@ input[type="submit" ] {
     display: block;
     padding: 15px;
     color: #fff;
-    max-height: 93px;
+    max-height: 97px;
     text-align: center;
     z-index: 4;
     border-radius: 5px;
@@ -1854,7 +1854,7 @@ input[type="submit" ] {
 .current-page-info,
 .map-buttom{
     width: 50%;
-    position: absolute;
+    /*position: absolute;*/
     display: table;
     right: 0;
     top: 0;
@@ -1873,12 +1873,55 @@ input[type="submit" ] {
     height: 100%;
     vertical-align: middle;
  }
+.current-page-eats,
+.map-buttom{
+    width: 100%;
+    position: absolute;
+    display: table;
+    right: 0;
+    top: 0;
+    height: 250px;
+    line-height: 250px;
+    white-space: nowrap;
+    font-size: 0;
+}
+.current-page-eats{
+    display: inline-block;
+}
+.current-page-eats:before,
+.map-buttom:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+ }
 .map-buttom{
     right: auto;
     left: 50%;
     cursor: pointer;
 }
 .current-page-info{
+    right: auto;
+    left: 0;
+    background-image: url(../images/backgrounds/dctouring.jpg);
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    text-align: center;
+    border-bottom-right-radius: 30px;
+    overflow: hidden;
+    z-index: 10;
+    cursor: default;
+    line-height: normal;
+    /*box-shadow: 0 10000px rgba(0,0,0,0.6) inset;*/
+}
+.current-page-info.hide-page-info{
+    left: -50%;
+    margin-left: -25px;
+}
+.current-page-eats{
     right: auto;
     left: 0;
     background-image: url(../images/backgrounds/4.jpg);
@@ -1893,9 +1936,9 @@ input[type="submit" ] {
     z-index: 10;
     cursor: default;
     line-height: normal;
-    box-shadow: 0 10000px rgba(0,0,0,0.6) inset;
+    /*box-shadow: 0 10000px rgba(0,0,0,0.6) inset;*/
 }
-.current-page-info.hide-page-info{
+.current-page-eats.hide-page-info{
     left: -50%;
     margin-left: -25px;
 }
@@ -1929,16 +1972,16 @@ input[type="submit" ] {
 }
 .breadcrumbs a{
     font-family: 'Capriola', sans-serif;
-    color: #fff;
-    font-size: 14px;
-    text-shadow: 0 0 6px rgba(0,0,0,0.7);
+    color: rgb(38,163,135);
+    font-size: 18px;
+    /*text-shadow: 0 0 6px rgba(0,0,0,0.7);*/
 }
 .listing-title .breadcrumbs a{
     color: #404040;
     text-shadow: none;
 }
 .breadcrumbs a:hover{
-    color: rgba(255,255,255,0.8);
+    /*color: rgba(255,255,255,0.8);*/
 }
 .listing-title .breadcrumbs a:hover{
     color: rgb(38,163,135);
@@ -2398,8 +2441,8 @@ input[type="submit" ] {
     opacity: 0.6;
 }
 .front-categories .row-title h1:before{
-    font-family: 'icon';
-    content: "\ea7a";
+    /*font-family: 'icon';
+    content: "\ea7a";*/
     position: absolute;
     top: 100%;
     left: -65px;
@@ -4974,12 +5017,12 @@ Notice: Cross browser placeholders need to be declared separately
     display: none;
 }
 .results-count{
-    text-align: left;
-    font-size: 15px;
+    text-align: center;
+    font-size: 22px;
     font-family: 'Capriola', sans-serif;
     color: rgb(38,163,135);
-    padding-left: 0;
-    display: inline-block;
+    /*padding-left: 0;*/
+    /*display: inline-block;*/
 }
 .feat-posts .results-count{
     display: block;
@@ -6823,6 +6866,7 @@ header.transparent .add-listing,
 .back-site,
 .page-head,
 .current-page-info,
+.current-page-eats,
 .map-buttom,
 .current-category,
 .map-button-text,
